--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/addon-links": "^7.6.13",
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/addon-themes": "^7.6.13",
+    "@storybook/addon-viewport": "^7.6.14",
     "@storybook/blocks": "^7.6.13",
     "@storybook/nextjs": "^7.6.13",
     "@storybook/react": "^7.6.13",
