--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -31,17 +32,21 @@
     "@storybook/nextjs": "^7.6.13",
     "@storybook/react": "^7.6.13",
     "@storybook/test": "^7.6.13",
+    "@testing-library/react": "^14.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^9.0.10",
+    "jsdom": "^24.0.0",
     "prettier": "^3.2.4",
     "storybook": "^7.6.13",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.3.0"
   },
   "eslintConfig": {
     "extends": [
