--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "test": "vitest",
     "coverage": "vitest run --coverage",
+    "type-check": "tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
