--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "lib": [
       "dom",
       "dom.iterable",
@@ -25,6 +26,7 @@
     "useDefineForClassFields": true,
     "experimentalDecorators": true,
     "composite": true,
+    "checkJs": true,
     "plugins": [
       {
         "name": "next"
